--- a/Video_Application/Base.lproj/Main.storyboard
+++ b/Video_Application/Base.lproj/Main.storyboard
@@ -55,6 +55,10 @@
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="KVX-Pb-MIE"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="1RW-MN-fB6"/>
+                                </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gMc-SM-gaG">
                                 <rect key="frame" x="327" y="517" width="48" height="30"/>
@@ -82,6 +86,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="collectionView_images" destination="hH5-LO-ds7" id="dQZ-7c-PYX"/>
                         <outlet property="view_video" destination="7d3-i0-BdW" id="Cb9-1c-2XU"/>
                     </connections>
                 </viewController>
